--- a/platformio.ini
+++ b/platformio.ini
@@ -40,6 +40,10 @@ build_flags =
 	-D DEFAULT_STIMULI_DURATION=0
 	-D DEFAULT_PULSE_WIDTH=0
 	-D DEFAULT_FREQUENCY=0
+
+	-D SEMG_FILTER_LOW_CUTOFF_FREQUENCY=10.0
+	-D SEMG_FILTER_HIGH_CUTOFF_FREQUENCY=40.0
+	-D SEMG_SAMPLING_TIME=0.01
 lib_deps = 
 	adafruit/Adafruit ADS1X15@^2.4.0
 	adafruit/Adafruit BusIO@^1.14.5
