Made FES and ADC functions static

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,8 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 build_flags = 
+	-D FES_MODULE_ENABLE=true
+
 	-D SDA_PIN=GPIO21
 	-D SCL_PIN=GPIO22
 	-D ADC_I2C_ADDR=0x48
@@ -44,6 +46,9 @@ build_flags =
 	-D SEMG_FILTER_LOW_CUTOFF_FREQUENCY=10.0
 	-D SEMG_FILTER_HIGH_CUTOFF_FREQUENCY=40.0
 	-D SEMG_SAMPLING_TIME=0.01
+
+	-D SEMG_DEFAULT_GAIN=100
+	-D SEMG_DEFAULT_DIFFICULTY=16
 lib_deps = 
 	adafruit/Adafruit ADS1X15@^2.4.0
 	adafruit/Adafruit BusIO@^1.14.5
