sEMG implementation and general renaming and refactoring

--- a/platformio.ini
+++ b/platformio.ini
@@ -33,9 +33,9 @@ build_flags =
 	-D H_BRIDGE_INPUT_1=32
 	-D H_BRIDGE_INPUT_2=33
 
-	-D INCREMENT_POTENTIOMETER=25
-	-D UP_DOWN_POTENTIOMETER=26
-	-D CS_POTENTIOMETER=27
+	-D POTENTIOMETER_PIN_INCREMENT=25
+	-D POTENTIOMETER_PIN_UP_DOWN=26
+	-D POTENTIOMETER_PIN_CS=27
 	-D DEFAULT_POTENTIOMETER_STEPS=1
 	-D MAXIMUM_POTENTIOMETER_STEPS=100
 
@@ -43,12 +43,21 @@ build_flags =
 	-D DEFAULT_PULSE_WIDTH=0
 	-D DEFAULT_FREQUENCY=0
 
+	-D SEMG_ADC_PIN=0
+	-D SEMG_ENABLE_PIN=18
+
 	-D SEMG_FILTER_LOW_CUTOFF_FREQUENCY=10.0
 	-D SEMG_FILTER_HIGH_CUTOFF_FREQUENCY=40.0
 	-D SEMG_SAMPLING_TIME=0.01
 
 	-D SEMG_DEFAULT_GAIN=100
-	-D SEMG_DEFAULT_DIFFICULTY=16
+	-D SEMG_DIFFICULTY_DEFAULT=16
+	-D SEMG_DIFFICULTY_MINIMUM=1
+	-D SEMG_DIFFICULTY_MAXIMUM=100
+	-D SEMG_DIFFICULTY_INCREMENT=1
+	-D SEMG_SAMPLES_PER_VALUE=50
+	-D SEMG_SAMPLES_PER_AVERAGE=10
+	-D SEMG_LOW_IMPEDANCE_THRESHOLD=10
 lib_deps = 
 	adafruit/Adafruit ADS1X15@^2.4.0
 	adafruit/Adafruit BusIO@^1.14.5
