Session module draft, general refactoring and other improvements

--- a/platformio.ini
+++ b/platformio.ini
@@ -58,6 +58,8 @@ build_flags =
 	-D SEMG_SAMPLES_PER_VALUE=50
 	-D SEMG_SAMPLES_PER_AVERAGE=10
 	-D SEMG_LOW_IMPEDANCE_THRESHOLD=10
+	-D SEMG_TRIGGER_THRESHOLD_MINIMUM=3
+	-D SEMG_TRIGGER_THRESHOLD_MAXIMUM=60
 lib_deps = 
 	adafruit/Adafruit ADS1X15@^2.4.0
 	adafruit/Adafruit BusIO@^1.14.5
