Bluetooth module implemented

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,42 +14,42 @@ board = esp32doit-devkit-v1
 framework = arduino
 build_flags = 
 	-D FES_MODULE_ENABLE=true
-
+	
 	-D SDA_PIN=GPIO21
 	-D SCL_PIN=GPIO22
 	-D ADC_I2C_ADDR=0x48
 	-D DEBUG=true
-
+	
 	-D STIMULI_BATTERY_INPUT_PIN=3
 	-D STIMULI_BATTERY_THRESHOLD=3.0
 	
 	-D MAIN_BATTERY_INPUT_PIN=2
 	-D MAIN_BATTERY_THRESHOLD=3.0
-
+	
 	-D LED_PIN_TRIGGER=GPIO25
 	-D LED_PIN_FES=GPIO26
 	-D LED_PIN_POWER=GPIO27
-
+	
 	-D H_BRIDGE_INPUT_1=32
 	-D H_BRIDGE_INPUT_2=33
-
+	
 	-D POTENTIOMETER_PIN_INCREMENT=25
 	-D POTENTIOMETER_PIN_UP_DOWN=26
 	-D POTENTIOMETER_PIN_CS=27
 	-D DEFAULT_POTENTIOMETER_STEPS=1
 	-D MAXIMUM_POTENTIOMETER_STEPS=100
-
+	
 	-D DEFAULT_STIMULI_DURATION=0
 	-D DEFAULT_PULSE_WIDTH=0
 	-D DEFAULT_FREQUENCY=0
-
+	
 	-D SEMG_ADC_PIN=0
 	-D SEMG_ENABLE_PIN=18
-
+	
 	-D SEMG_FILTER_LOW_CUTOFF_FREQUENCY=10.0
 	-D SEMG_FILTER_HIGH_CUTOFF_FREQUENCY=40.0
 	-D SEMG_SAMPLING_TIME=0.01
-
+	
 	-D SEMG_DEFAULT_GAIN=100
 	-D SEMG_DIFFICULTY_DEFAULT=16
 	-D SEMG_DIFFICULTY_MINIMUM=1
@@ -60,8 +60,14 @@ build_flags =
 	-D SEMG_LOW_IMPEDANCE_THRESHOLD=10
 	-D SEMG_TRIGGER_THRESHOLD_MINIMUM=3
 	-D SEMG_TRIGGER_THRESHOLD_MAXIMUM=60
+	
+	'-D BLUETOOTH_AT_SET_MODULE_NAME="AT+NAME=NeuroEstimulator"'
+	'-D BLUETOOTH_AT_SET_BAUDRATE_115200="AT+UART=115200,0,0"'
+	-D BLUETOOTH_JSON_CONNECTED_CODE=1
+	-D JSON_BUFFER_SIZE=512
 lib_deps = 
 	adafruit/Adafruit ADS1X15@^2.4.0
 	adafruit/Adafruit BusIO@^1.14.5
 	Wire
 	SPI
+	bblanchon/ArduinoJson@^6.21.3
