Message handler queue implementation init (doesn't compile)

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,6 +25,8 @@ build_flags =
 	
 	-D MAIN_BATTERY_INPUT_PIN=2
 	-D MAIN_BATTERY_THRESHOLD=3.0
+
+	-D DEFAULT_BATTERY_THRESHOLD=3.0
 	
 	-D LED_PIN_TRIGGER=GPIO25
 	-D LED_PIN_FES=GPIO26
