giroscopio e teste do modulo

--- a/platformio.ini
+++ b/platformio.ini
@@ -62,6 +62,8 @@ build_flags =
 	-D SEMG_LOW_IMPEDANCE_THRESHOLD=10
 	-D SEMG_TRIGGER_THRESHOLD_MINIMUM=3
 	-D SEMG_TRIGGER_THRESHOLD_MAXIMUM=60
+
+	-D DEFAULT_BATTERY_THRESHOLD=3.0
 	
 	'-D BLUETOOTH_AT_SET_MODULE_NAME="AT+NAME=NeuroEstimulator"'
 	'-D BLUETOOTH_AT_SET_BAUDRATE_115200="AT+UART=115200,0,0"'
@@ -73,8 +75,5 @@ lib_deps =
 	adafruit/Adafruit BusIO@^1.14.5
 	Wire
 	SPI
-<<<<<<< Updated upstream
 	bblanchon/ArduinoJson@^6.21.3
-=======
 	adafruit/Adafruit MPU6050@^2.2.4
->>>>>>> Stashed changes
