leitura do pino de status no modulo bluetooth

--- a/platformio.ini
+++ b/platformio.ini
@@ -65,6 +65,7 @@ build_flags =
 	
 	'-D BLUETOOTH_AT_SET_MODULE_NAME="AT+NAME=NeuroEstimulator"'
 	'-D BLUETOOTH_AT_SET_BAUDRATE_115200="AT+UART=115200,0,0"'
+	-D BLUETOOTH_MODULE_STATUS_PIN=23
 	-D BLUETOOTH_JSON_CONNECTED_CODE=1
 	-D JSON_BUFFER_SIZE=512
 lib_deps = 
