--- a/platformio.ini
+++ b/platformio.ini
@@ -44,6 +44,7 @@ build_flags =
 	-D DEFAULT_STIMULI_DURATION=0
 	-D DEFAULT_PULSE_WIDTH=0
 	-D DEFAULT_FREQUENCY=0
+	-D DEFAULT_AMPLITUDE=0
 	
 	-D SEMG_ADC_PIN=0
 	-D SEMG_ENABLE_PIN=18
