--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Clone Filters.h Dependency
-        run: git clone https://github.com/MartinBloedorn/libFilter.git lib
+        run: git clone https://github.com/MartinBloedorn/libFilter.git lib/libFilter
 
       - uses: actions/checkout@v3
       - uses: actions/cache@v3
