--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,8 @@ build_flags =
 	-D SCL_PIN=GPIO22
 	-D ADC_I2C_ADDR=0x48
 	-D DEBUG=true
+
+	-D PIN_EMERGENCY_BUTTON=15
 	
 	-D STIMULI_BATTERY_INPUT_PIN=3
 	-D STIMULI_BATTERY_THRESHOLD=3.0
@@ -63,6 +65,7 @@ build_flags =
 	-D SEMG_LOW_IMPEDANCE_THRESHOLD=10
 	-D SEMG_TRIGGER_THRESHOLD_MINIMUM=3
 	-D SEMG_TRIGGER_THRESHOLD_MAXIMUM=60
+	-D SEMG_DEFAULT_READINGS_AMOUNT=2
 
 	-D DEFAULT_BATTERY_THRESHOLD=3.0
 	
@@ -71,6 +74,9 @@ build_flags =
 	-D BLUETOOTH_MODULE_STATUS_PIN=23
 	-D BLUETOOTH_JSON_CONNECTED_CODE=1
 	-D JSON_BUFFER_SIZE=512
+
+	-D SESSION_TASK_PRIORITY=20
+	-D SESSION_DEFAULT_TIME_BETWEEN_STIMULI=5
 lib_deps = 
 	adafruit/Adafruit ADS1X15@^2.4.0
 	adafruit/Adafruit BusIO@^1.14.5
