fes integration; small adjustments

--- a/platformio.ini
+++ b/platformio.ini
@@ -77,6 +77,10 @@ build_flags =
 
 	-D SESSION_TASK_PRIORITY=20
 	-D SESSION_DEFAULT_TIME_BETWEEN_STIMULI=5
+
+	-D MESSAGE_HANDLER_SESSION_TASK_PRIORITY=20
+
+	-D GYROSCOPE_TIME=5000
 lib_deps = 
 	adafruit/Adafruit ADS1X15@^2.4.0
 	adafruit/Adafruit BusIO@^1.14.5
