Added trigger test and trigger messages

--- a/platformio.ini
+++ b/platformio.ini
@@ -66,6 +66,7 @@ build_flags =
 	-D SEMG_TRIGGER_THRESHOLD_MINIMUM=3
 	-D SEMG_TRIGGER_THRESHOLD_MAXIMUM=60
 	-D SEMG_DEFAULT_READINGS_AMOUNT=2
+	-D SEMG_DEFAULT_TEST_DURATION_SECONDS=10
 
 	-D DEFAULT_BATTERY_THRESHOLD=3.0
 	
