added sampling by timer interruption

--- a/platformio.ini
+++ b/platformio.ini
@@ -67,6 +67,7 @@ build_flags =
 	-D SEMG_TRIGGER_THRESHOLD_MAXIMUM=60
 	-D SEMG_DEFAULT_READINGS_AMOUNT=2
 	-D SEMG_DEFAULT_TEST_DURATION_SECONDS=10
+	-D SEMG_SAMPLING_PERIOD=1.162790698
 
 	-D DEFAULT_BATTERY_THRESHOLD=3.0
 	
