Improved logging in most files using ESP_LOG

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,8 @@
 [env:esp32doit-devkit-v1]
 platform = espressif32
 board = esp32doit-devkit-v1
+monitor_speed = 115200
+monitor_filters = direct, esp32_exception_decoder
 framework = arduino
 build_flags = 
 	-D FES_MODULE_ENABLE=true
@@ -18,7 +20,12 @@ build_flags =
 	-D SDA_PIN=GPIO21
 	-D SCL_PIN=GPIO22
 	-D ADC_I2C_ADDR=0x48
+
 	-D DEBUG=true
+	-D LOG_LOCAL_LEVEL=ESP_LOG_DEBUG
+	-D CONFIG_LOG_COLORS=true
+	-D CONFIG_LOG_TIMESTAMP_SOURCE_SYSTEM=true
+	-D CORE_DEBUG_LEVEL=4
 
 	-D PIN_EMERGENCY_BUTTON=15
 	
@@ -82,7 +89,7 @@ build_flags =
 
 	-D MESSAGE_HANDLER_SESSION_TASK_PRIORITY=20
 
-	-D GYROSCOPE_TIME=5000
+	-D GYROSCOPE_MODULE_ENABLE=true
 lib_deps = 
 	adafruit/Adafruit ADS1X15@^2.4.0
 	adafruit/Adafruit BusIO@^1.14.5
