--- a/NeuraX.Firmware/platformio.ini
+++ b/NeuraX.Firmware/platformio.ini
@@ -8,11 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcu-32s]
+[env:esp32doit-devkit-v1]
 platform = espressif32
-board = nodemcu-32s
+board = esp32doit-devkit-v1
+monitor_speed = 115200
+monitor_filters = direct, esp32_exception_decoder
 framework = arduino
-platform_packages = 
-	platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
-board_build.f_cpu = 240000000L
 
