--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 monitor_speed = 115200
-monitor_filters = direct, esp32_exception_decoder
+monitor_filters = esp32_exception_decoder
 framework = arduino
 build_flags = 
 	-D FES_MODULE_ENABLE=true
@@ -54,7 +54,7 @@ build_flags =
 	-D DEFAULT_STIMULI_DURATION=0
 	-D DEFAULT_PULSE_WIDTH=0
 	-D DEFAULT_FREQUENCY=0
-	-D DEFAULT_AMPLITUDE=0
+	-D DEFAULT_AMPLITUDE=7
 	
 	-D SEMG_ADC_PIN=0
 	-D SEMG_ENABLE_PIN=18
